--- a/Meu.css
+++ b/Meu.css
@@ -1,6 +1,6 @@
 #background{
-    background-color: rgb(202, 81, 122);
-    
+    background-image: url('Fondo.png');
+    background-size: cover;
 }
 
 #start{
