--- a/Meu.css
+++ b/Meu.css
@@ -1,5 +1,5 @@
 #background{
-    background-image: url('Meu/Icons/Fondo.png');
+    background-image: url('Icons/Fondo.png');
     background-size: cover;
 }
 
