--- a/Meu3/Meu3.css
+++ b/Meu3/Meu3.css
@@ -1,5 +1,5 @@
 #background{
-    background-image: url('/Icons/Fondo.png');
+    background-image: url('/icons/Fondo.jpeg');
     background-size: cover;
 }
 
