--- a/Meu2/Meu2.css
+++ b/Meu2/Meu2.css
@@ -1,5 +1,5 @@
 #background{
-    background-image: url("/icons/Fondo.jpeg");
+    background-image: url("Meu/icons/Fondo.jpg");
     background-size: cover;
 }
 
