--- a/Meu.css
+++ b/Meu.css
@@ -1,6 +1,6 @@
-#background{
-    background-image: url('icons/Fondo.jpeg');
-    background-size: cover;
+*{
+    margin: 0;
+    box-sizing: border-box;
 }
 
 #start{
@@ -29,4 +29,21 @@
     font-family: "Sigmar", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+@media (max-width: 600px) {
+
+    body{
+        background-image: url(/icons/FondoTelefono.jpg);
+    }
+
+}
+
+@media (min-width: 601px) {
+
+    body{
+        background-image: url(/icons/Fondo.jpeg);
+        background-size: cover;
+    }
+
 }
