--- a/Meu.css
+++ b/Meu.css
@@ -34,7 +34,7 @@
 @media (max-width: 600px) {
 
     body{
-        background-image: url(/icons/FondoTelefono.jpg);
+        background-image: url(FondoTelefono.jpg);
     }
 
 }
@@ -42,7 +42,7 @@
 @media (min-width: 601px) {
 
     body{
-        background-image: url(/icons/Fondo.jpeg);
+        background-image: url(Fondo.jpeg);
         background-size: cover;
     }
 
