--- a/Meu.css
+++ b/Meu.css
@@ -34,7 +34,7 @@
 @media (max-width: 600px) {
 
     body{
-        background-image: url(FondoTelefono.jpg);
+        background-image: url(FondoTelefono.jpg)
     }
 
 }
