--- a/Meu2/Meu2.css
+++ b/Meu2/Meu2.css
@@ -75,3 +75,20 @@
     line-height: 40px;
 }
 
+@media (max-width: 600px) {
+
+    body{
+        background-image: url(FondoTelefono.jpg)
+    }
+
+}
+
+@media (min-width: 601px) {
+
+    body{
+        background-image: url(Fondo.jpeg);
+        background-size: cover;
+    }
+
+}
+
