--- a/Meu2/Meu2.css
+++ b/Meu2/Meu2.css
@@ -41,6 +41,14 @@
     margin: 10px;
 }
 
+#back:hover{
+    background-color: rgb(131, 123, 127); 
+}
+
+#back:active{
+    transform: translateY(2px); 
+}
+
 #forward:hover{
     background-color: rgb(131, 123, 127); 
 }
