--- a/Meu2/Meu2.css
+++ b/Meu2/Meu2.css
@@ -96,7 +96,7 @@
     height: 600px;
     border-radius: 10px;
     border: 5px solid rgb(0, 0, 0);
-    margin-bottom: 300px;
+    margin-bottom: 30px;
     }
 
     #text{
@@ -107,6 +107,31 @@
         text-align: center;
         line-height: 30px;
         font-size: 8px;
+    }
+
+    #back{
+        background-color: rgb(180, 153, 153);
+        color: rgb(255, 255, 255);
+        border-radius: 10px;
+        font-size: 10px;
+        width: 70px;
+        font-family: "Sigmar", sans-serif;
+        font-weight: 100;
+        font-style: normal;
+        margin: 10px;
+    }
+
+    #forward{
+        background-color: rgb(180, 153, 153);
+        color: rgb(255, 255, 255);
+        font-size: 10px;
+        border-radius: 10px;
+        font-size: 10px;
+        width: 70px;
+        font-family: "Sigmar", sans-serif;
+        font-weight: 100;
+        font-style: normal;
+        margin: 10px;
     }
 
 }
