--- a/Meu.css
+++ b/Meu.css
@@ -42,7 +42,7 @@
 @media (min-width: 601px) {
 
     body{
-        background-image: url(Fondo.jpeg);
+        background-image: url(/Fondo.jpeg);
         background-size: cover;
     }
 
