--- a/Meu.css
+++ b/Meu.css
@@ -31,19 +31,6 @@
     font-style: normal;
 }
 
-@media (max-width: 600px) {
-
-    body{
-        background-image: url(FondoTelefono.jpg)
-    }
-
-}
-
-@media (min-width: 601px) {
-
-    body{
-        background-image: url(/Fondo.jpeg);
-        background-size: cover;
-    }
-
+body{
+    background-image: url(Fondo.jpeg);
 }
