--- a/Sentimientos/Sentimiento-5/Sentimiento5.css
+++ b/Sentimientos/Sentimiento-5/Sentimiento5.css
@@ -58,6 +58,14 @@
     line-height: 40px;
 }
 
+#text3{
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    text-align: center;
+    line-height: 40px;
+}
+
 .small-text{
     font-size: 0.8em;
 }
